# VolcGases

./: CMakeLists.txt  Explanation_of_model.ipynb  Monte_carlo_simulations.ipynb  README.md  Several_plots.ipynb  compile.sh  functions.py  reproduce_Gaillard_2014_fig3.ipynb  setup.py
.github/workflows/: test.yaml
.ipynb_checkpoints/: Monte_carlo_simulations-checkpoint.ipynb
VolcGases/: __init__.py  functions.py
article_calculations/: Explanation_of_model.ipynb  Monte_carlo_simulations.ipynb  simple_system.nb
article_calculations/.ipynb_checkpoints/: Explanation_of_model-checkpoint.ipynb  Monte_carlo_simulations-checkpoint.ipynb  Plotting-checkpoint.ipynb  Several_plots-checkpoint.ipynb  reproduce_Gaillard_2014_fig3-checkpoint.ipynb
examples/: example.ipynb
src/: CMakeLists.txt  VolcGasesFort.f90  VolcGasesFort_wrapper.f90  volcgases.f90  volcgases_const.f90
src/minpack/: fdjac2.f  lmder1.f  lmdif.f
test/: CMakeLists.txt  test_volcgases.f90
